GNOME Bugzilla – Bug 608370
dnd drag-dest signal handlers don't get correctly disconnected when unsetting the drag dest
Last modified: 2010-01-29 17:11:34 UTC
gtk_drag_dest_unset() doesn't unset existing signal handlers.
Created attachment 152513 [details] [review] Proposed patch
Comment on attachment 152513 [details] [review] Proposed patch Looks good