Remove existing signal connections in gtk_drag_dest_unset().

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=608370
(cherry picked from commit 2147e57f46c43ef3fd3c145735329f8f2a558c4f)